[package]
name = "aletheia"
version = "1.0.0"
edition = "2021"
description = "A client library for the Guardian's content API"
license = "MIT"
documentation = "https://docs.rs/aletheia"
repository = "https://github.com/marsavar/aletheia/"
keywords = ["guardian", "api", "client", "library", "http"]
categories = ["api-bindings", "parsing", "web-programming::http-client"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
